# dateo-fun-remover

./: .gitignore  Cargo.toml  README.md  build.map  global.css
benches/: benchmark.rs
rust/: Cargo.toml
rust/src/: lib.rs
solver/: Cargo.toml
solver/src/: finder.rs  finder_old.rs  inputs.rs  lib.rs  main.rs
solver/src/finder/: atom.rs  atom_old.rs  func.rs  joiner.rs  math.rs  operation.rs  score.rs  tree.rs
src/: finder.rs  inputs.rs  main.rs
src/finder/: atom.rs  atom_store.rs  codon.rs  func.rs  func_list.rs  function.rs  joiner.rs  math.rs  operation.rs  score.rs  tree.rs  tree_shapes.rs
svelte/: package-lock.json  package.json  rollup.config.js
svelte/public/: index.html
svelte/src/: App.svelte  Solution.svelte  main.js  nums.js  worker.js
