[package]
name = "datoe_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
itertools = "0.10.5"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"

[profile.dev]
opt-level = 3
debug = true
