[package]
name = "datoe_fun_remover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
indicatif = "0.17.3"
itertools = "0.10.5"
ordered-float = "3.4.0"
rand = "0.8.5"
rayon = "1.6.1"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
criterion = "0.4"


[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
